Minor Text Edits & Mobile Formating Fix
The certs were not aligning correctly on mobile this breaks them cleanly over two lines

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -135,59 +135,6 @@ h1 {
             line-height: 0;
         }
 
-#tech-experience {
-    padding: 0 5px 5px 5px;
-}
-
-    #tech-experience h2{
-        text-align: center;
-        border-bottom: 1px solid var(--very-dark-red);
-        margin: 0;
-    }
-
-    .tech-sector h3 {
-        text-align: center;
-        border-bottom: 1px dashed var(--very-dark-red);
-        margin: 0 5px;
-    }
-
-    .tech-logos {
-        margin-top: 5px;
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        padding: 0;
-        list-style: none;
-    }
-
-        .tech-logos li {
-            margin-bottom: 10px;
-            display: flex;
-            flex-direction: column;
-            box-sizing: border-box;
-        }
-
-        .tech-logos a {
-            display: flex;
-            height: 100%;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-between;
-            transition: all .1s ease-in-out;
-            font-style: italic;
-            color: black;
-        }
-
-            .tech-logos a:hover {
-                transform: scale(1.2); 
-            }
-
-            .tech-logos a img {
-                max-width: 40px;
-                max-height: 40px;
-                margin-bottom: 2px;
-            }
-
 .employment-panel {
     border-radius: 10px;
     margin-top: 10px;
@@ -274,11 +221,15 @@ h1 {
     }
 
     .qualification-name-abbr {
-        width: 10%;
+        margin-right: 5px;
     }
 
-    .qualification-body {
-        width: 8%;
+    .qualification-body::before {
+        content: ' - ';
+    }
+
+    .qualification-name {
+        width: 100%;
     }
 
     .employment-panel h2 {
